# csg-tools

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindGLFW.cmake
src/: csg2json.cpp  csgparser.cpp  csgparser.hpp  csgviewer.cpp
src/csgframework/: CMakeLists.txt  CsgLoader.cpp  CsgLoader.hpp  CsgTree.cpp  CsgTree.hpp
src/imgui/: CMakeLists.txt  imgui_impl_glfw.cpp
src/parser/: expression.h
src/stdgl/: Box.cpp  Box.hpp  CMakeLists.txt  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  Texture3D.cpp  Texture3D.hpp  TextureBuffer.cpp  TextureBuffer.hpp  Types.hpp  VoxelData.cpp  VoxelData.hpp
